Cleaned up sample app, fixed minor issues
Sample application has been cleaned up considerably, now is actually user-friendly and works pretty much the same as GXTConvert; fixed some issues with file format detection; added/improved assembly information

--- a/Scarlet/Scarlet.csproj
+++ b/Scarlet/Scarlet.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Drawing\ImageBinary.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="AssemblyHelpers.cs" />
+    <Compile Include="IO\CommandLineArgsException.cs" />
     <Compile Include="IO\CommandLineTools.cs" />
     <Compile Include="IO\DisposableCollection.cs" />
     <Compile Include="IO\EndianBinaryReader.cs" />
