Changed file detection code & added (V)TXP image format
DefaultExtensionAttribute renamed to FilenamePatternAttribute, now contains a Regex string instead of a file extension, which is matched against the filename at detection time; added incomplete handler for (V)TXP images from Punch Line for PSV

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -53,6 +53,7 @@
     <Compile Include="TX2.cs" />
     <Compile Include="TXF.cs" />
     <Compile Include="TXP.cs" />
+    <Compile Include="VTXP.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scarlet\Scarlet.csproj">
