Added PSPFS_V1 container unpacking
Added new ContainerFormat for PSPFS_V1 files, tested with archives from Phantom Brave PSP

--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -43,6 +43,7 @@
     <Compile Include="NISPACK.cs" />
     <Compile Include="NSAC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PSPFSv1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scarlet\Scarlet.csproj">
