Added TXG image format & PSP housekeeping
Added handler for TXG image format (Sakurasou PSP); added proper PSP unswizzling functionality to ImageBinary post-processing; changed TXP handler to use post-processing & removed old, weird rearranging code there

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -52,6 +52,7 @@
     <Compile Include="TMX.cs" />
     <Compile Include="TX2.cs" />
     <Compile Include="TXF.cs" />
+    <Compile Include="TXG.cs" />
     <Compile Include="TXP.cs" />
     <Compile Include="VTXP.cs" />
   </ItemGroup>
