Added (T)XGLT, CBG image support & various changes
Added support for (T)XGLT and CBG files from Sakurasou PSP; added BGR channel layout and pre-made formats BGR888 and BGR565; added BGB565 to TXG handler; added "untiling" for PSP (or just Sakurasou BGR565, to be determined); minor changes to FileFormat class and the new image handlers, to better support relative stream positions (i.e. trying to verify magic number at position relative to current)

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CBG.cs" />
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
     <Compile Include="NMT.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="TXG.cs" />
     <Compile Include="TXP.cs" />
     <Compile Include="VTXP.cs" />
+    <Compile Include="XGTL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scarlet\Scarlet.csproj">
