--- a/ScarletTestApp/ScarletTestApp.csproj
+++ b/ScarletTestApp/ScarletTestApp.csproj
@@ -67,6 +67,14 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>"$(SolutionDir)External\bin\NetRevisionTool.exe" /info /patch "$(ProjectDir)"
+</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>"$(SolutionDir)External\bin\NetRevisionTool.exe" /restore "$(ProjectDir)"
+</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
