Added FMDX container & GBIX image handling
Added preliminary support for FMDX containers and GBIX images (K-ON Houkago Live, PSP); support for DXT1-compressed data in GBIX files is broken, see Scarlet's DXTx.cs

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CBG.cs" />
     <Compile Include="CSU.cs" />
+    <Compile Include="GBIX.cs" />
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
     <Compile Include="NMT.cs" />
