--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CBG.cs" />
     <Compile Include="CSU.cs" />
+    <Compile Include="DDS.cs" />
     <Compile Include="GBIX.cs" />
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
