Another "unrelated stuff" commit
Rewritten DXTx decompression code to be clearer/cleaner; changed special pixel format handling somewhat; changed file identification system to now require magic *and* filename pattern to match if both are given; added DMPBM image format used in ex. SMT Devil Survivor Overclocked; added DS 0x10-style LZ77 decompression; made sample application automatically parse decompressed files; minor other changes

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -46,6 +46,7 @@
     <Compile Include="CBG.cs" />
     <Compile Include="CSU.cs" />
     <Compile Include="DDS.cs" />
+    <Compile Include="DMPBM.cs" />
     <Compile Include="GBIX.cs" />
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
