--- a/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
+++ b/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompressionFormat.cs" />
+    <Compile Include="DS_LZ77x10.cs" />
     <Compile Include="NISLZS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
