Added preliminary KSLT image support
Added preliminary support for KSLT/TLSK1100 images used in DoA Xtreme 3 Vita and possibly other Koei Tecmo games

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -50,6 +50,7 @@
     <Compile Include="GBIX.cs" />
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
+    <Compile Include="KSLT.cs" />
     <Compile Include="NMT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SHTX.cs" />
