--- a/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
+++ b/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CompressionFormat.cs" />
     <Compile Include="DS_LZ77x10.cs" />
+    <Compile Include="GZip.cs" />
     <Compile Include="NISLZS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
