--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -48,6 +48,7 @@
     <Compile Include="NSAC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PSPFSv1.cs" />
+    <Compile Include="UKArc.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scarlet\Scarlet.csproj">
