Added preliminary FADEBABE support
Added preliminary support for 0xFADEBABE archives (namely, DATA1.DAT) used by Akiba's Trip for PSP

--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContainerFormat.cs" />
+    <Compile Include="DATAkiba.cs" />
     <Compile Include="FMDX.cs" />
     <Compile Include="NISPACK.cs" />
     <Compile Include="NSAC.cs" />
