Added preliminary Stellvia .dat and TIPS support
Added preliminary support for .dat archives and TIPS images from Uchuu no Stellvia for PS2

--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ContainerFormat.cs" />
     <Compile Include="DATAkiba.cs" />
+    <Compile Include="DATStellvia.cs" />
     <Compile Include="FMDX.cs" />
     <Compile Include="NISPACK.cs" />
     <Compile Include="NSAC.cs" />
