Added GCNT, indexed TXF support
Added support for GCNT image files; added support for indexed TXF images (multiple headers, palettes, a bit hacky); modified DXTx code to support GCNT (or GameCube in general?) image files and added some general GCN support code; probably broke stuff, ex. DXTx reading for other formats, so into a branch this goes!

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DDS.cs" />
     <Compile Include="DMPBM.cs" />
     <Compile Include="GBIX.cs" />
+    <Compile Include="GCNT.cs" />
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
     <Compile Include="KSLT.cs" />
