Added preliminary BTGA image support
Added some preliminary support for "BTGA" images from ex. Lego games for 3DS, thanks to BlackDragonHunt and Ehm; support for similar files from other platforms still needs to be checked and added, if necessary

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BTGA.cs" />
     <Compile Include="CBG.cs" />
     <Compile Include="CSU.cs" />
     <Compile Include="DDS.cs" />
