GCN stuff, some common, some Killer 7/NMH specific

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DDS.cs" />
     <Compile Include="DMPBM.cs" />
     <Compile Include="GBIX.cs" />
+    <Compile Include="GCT.cs" />
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
     <Compile Include="KSLT.cs" />
