Added Grezzo 3DS format support
Added support for various formats used by Grezzo on 3DS, namely ZAR (v1) and GAR (v2 and v5) archives, LzS compression; also added basic support for generic CTXB texture files

--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -46,11 +46,14 @@
     <Compile Include="DATAkiba.cs" />
     <Compile Include="DATStellvia.cs" />
     <Compile Include="FMDX.cs" />
+    <Compile Include="GARv2.cs" />
+    <Compile Include="GARv5.cs" />
     <Compile Include="NISPACK.cs" />
     <Compile Include="NSAC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PSPFSv1.cs" />
     <Compile Include="UKArc.cs" />
+    <Compile Include="ZARv1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scarlet\Scarlet.csproj">
