--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -50,6 +50,7 @@
     <Compile Include="GARv5.cs" />
     <Compile Include="NISPACK.cs" />
     <Compile Include="NSAC.cs" />
+    <Compile Include="P5BustupBIN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PSPFSv1.cs" />
     <Compile Include="UKArc.cs" />
