--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DDS.cs" />
     <Compile Include="DMPBM.cs" />
     <Compile Include="GBIX.cs" />
+    <Compile Include="GNF.cs" />
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
     <Compile Include="KSLT.cs" />
