--- a/Scarlet/Scarlet.csproj
+++ b/Scarlet/Scarlet.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drawing\Compression\BC7.cs" />
     <Compile Include="Drawing\Compression\DXTx.cs" />
     <Compile Include="Drawing\Compression\ETC1.cs" />
     <Compile Include="Drawing\Compression\PVRTC.cs" />
