Added incomplete KTX image support
Added some incomplete code for handling KTX (Khronos Texture; OpenGL) image files, can't actually convert anything yet and throws NotImplementedException; added MipmapLevel class for mipmap information storage, made BTGA, GBIX and KTX use it

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ImageFormat.cs" />
     <Compile Include="GXT.cs" />
     <Compile Include="KSLT.cs" />
+    <Compile Include="KTX.cs" />
     <Compile Include="NMT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SHTX.cs" />
