Added RGTC (BC4/5) decompression
Added support for decompressing RGTC (aka BC4 and BC5) image data, in turn modified DXTx classes to accommodate the rather similar RGTC

--- a/Scarlet/Scarlet.csproj
+++ b/Scarlet/Scarlet.csproj
@@ -44,8 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Drawing\Compression\BC7.cs" />
-    <Compile Include="Drawing\Compression\DXTx.cs" />
+    <Compile Include="Drawing\Compression\BPTC.cs" />
+    <Compile Include="Drawing\Compression\DXTxRGTC.cs" />
     <Compile Include="Drawing\Compression\ETC1.cs" />
     <Compile Include="Drawing\Compression\PVRTC.cs" />
     <Compile Include="Drawing\Constants.cs" />
