Added BPTC (Float/Signed Float; BC6) decompression
BC6 ported from detex at https://github.com/hglm/detex/tree/cab11584d9be140602a66fd9a88ef0b99f08a97a

--- a/Scarlet/Scarlet.csproj
+++ b/Scarlet/Scarlet.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drawing\Compression\BPTC.cs" />
+    <Compile Include="Drawing\Compression\BPTCFloat.cs" />
     <Compile Include="Drawing\Compression\DXTxRGTC.cs" />
     <Compile Include="Drawing\Compression\ETC1.cs" />
     <Compile Include="Drawing\Compression\PVRTC.cs" />
