Add CPK container format
Code was adapted from https://github.com/esperknight/CriPakTools, which itself was adapted from Nanshi3's code (http://forums.fuwanovel.org/index.php?/topic/1785-request-for-psp-hackers/page-4), which again was adapted from Falo'sinitial code on the Xentax forums (http://forum.xentax.com/viewtopic.php?f=10&t=10646)

--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContainerFormat.cs" />
+    <Compile Include="CPK.cs" />
     <Compile Include="DATAkiba.cs" />
     <Compile Include="DATStellvia.cs" />
     <Compile Include="FMDX.cs" />
