--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -58,6 +58,7 @@
     <Compile Include="KTX.cs" />
     <Compile Include="NMT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PSSG.cs" />
     <Compile Include="SHTX.cs" />
     <Compile Include="SHTXFS.cs" />
     <Compile Include="STEX.cs" />
