Added format detection attribute
Added new FormatDetectionAttribute for file formats, allows specifying a function to be executed when Scarlet attempts detection, ex. to sanity check header values when no clear magic numbers are available, see issue #14; made P5BustupBIN container format use new attribute

--- a/Scarlet/Scarlet.csproj
+++ b/Scarlet/Scarlet.csproj
@@ -60,6 +60,7 @@
     <Compile Include="IO\EndianBinaryReader.cs" />
     <Compile Include="IO\FilenamePatternAttribute.cs" />
     <Compile Include="IO\FileFormat.cs" />
+    <Compile Include="IO\FormatDetectionAttribute.cs" />
     <Compile Include="IO\MagicNumberAttribute.cs" />
     <Compile Include="Platform\Nintendo\N3DS.cs" />
     <Compile Include="Platform\Sony\PS2.cs" />
