Added partial support for NvFD image format
Added partial support for NvFD/"XTX"/Tegra X1 texture images, as used in (some?) Switch games; still missing unswizzling logic

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -62,6 +62,7 @@
     <Compile Include="SHTX.cs" />
     <Compile Include="SHTXFS.cs" />
     <Compile Include="STEX.cs" />
+    <Compile Include="TegraXTX.cs" />
     <Compile Include="TEX.cs" />
     <Compile Include="TID.cs" />
     <Compile Include="TIPS.cs" />
