Added G1TG image format
Added basic support for G1TG image format (ex. Atelier Shallie, PS3), still incomplete and possibly somewhat hacky

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CSU.cs" />
     <Compile Include="DDS.cs" />
     <Compile Include="DMPBM.cs" />
+    <Compile Include="G1TG.cs" />
     <Compile Include="GBIX.cs" />
     <Compile Include="GNF.cs" />
     <Compile Include="ImageFormat.cs" />
