Added support for MPK archives and DEFLATE decompression
Added support for MPK archives from ex. YU-NO (PS Vita) and at least certain DEFLATE-compressed data (header 0x78 0x9C); probably needs improvement, as does the container and compression infrastructure in general

--- a/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
+++ b/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CompressionFormat.cs" />
     <Compile Include="CRILAYLA.cs" />
+    <Compile Include="DEFLATE.cs" />
     <Compile Include="DS_LZ77x10.cs" />
     <Compile Include="GrezzoLZS.cs" />
     <Compile Include="GZip.cs" />
