--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -49,6 +49,7 @@
     <Compile Include="FMDX.cs" />
     <Compile Include="GARv2.cs" />
     <Compile Include="GARv5.cs" />
+    <Compile Include="MPK.cs" />
     <Compile Include="NARC.cs" />
     <Compile Include="NISPACK.cs" />
     <Compile Include="NSAC.cs" />
