--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -60,6 +60,7 @@
     <Compile Include="NMT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PSSG.cs" />
+    <Compile Include="RTEX.cs" />
     <Compile Include="SHTX.cs" />
     <Compile Include="SHTXFS.cs" />
     <Compile Include="STEX.cs" />
