Added some newer NIS formats
Added some support for some newer stuff by NIS, mainly for Disgaea 1 Switch; incomplete, hiatus, etc, etc.

--- a/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
+++ b/Scarlet.IO.ContainerFormats/Scarlet.IO.ContainerFormats.csproj
@@ -55,6 +55,7 @@
     <Compile Include="NSAC.cs" />
     <Compile Include="P5BustupBIN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PSFSv1.cs" />
     <Compile Include="PSPFSv1.cs" />
     <Compile Include="TPPK.cs" />
     <Compile Include="UKArc.cs" />
