--- a/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
+++ b/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
@@ -51,6 +51,7 @@
     <Compile Include="NISLZS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpikeDRVita.cs" />
+    <Compile Include="YKCMPv1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Scarlet\Scarlet.csproj">
