Added some PIC4, TXA4 and OLZP support
Support for images and compressed data from Konosuba PSVita dungeon crawler; incomplete, somewhat buggy, OLZP not really tested, etc.; also, Scarlet is still UNMAINTAINED as per the repo description

--- a/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
+++ b/Scarlet.IO.CompressionFormats/Scarlet.IO.CompressionFormats.csproj
@@ -49,6 +49,7 @@
     <Compile Include="GrezzoLZS.cs" />
     <Compile Include="GZip.cs" />
     <Compile Include="NISLZS.cs" />
+    <Compile Include="OLZP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpikeDRVita.cs" />
     <Compile Include="YKCMPv1.cs" />
