--- a/Scarlet/Scarlet.csproj
+++ b/Scarlet/Scarlet.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AssemblyHelpers.cs" />
     <Compile Include="IO\CommandLineArgsException.cs" />
     <Compile Include="IO\CommandLineTools.cs" />
+    <Compile Include="IO\Compression\EGLZ77.cs" />
     <Compile Include="IO\DisposableCollection.cs" />
     <Compile Include="IO\EndianBinaryReader.cs" />
     <Compile Include="IO\FilenamePatternAttribute.cs" />
