Added partial BUP4 support & some minor PIC4 stuff
Character portraits, ho!, tho it's incomplete, and because of the alpha channel it's kinda buggy, too

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BTEX.cs" />
     <Compile Include="BTGA.cs" />
+    <Compile Include="BUP4.cs" />
     <Compile Include="CBG.cs" />
     <Compile Include="CMB.cs" />
     <Compile Include="CTXB.cs" />
