Added MSK3 support
Yeah, I'm still having fun figuring out stuff in this Konosuba game. This is just for my own enjoyment of reverse engineering at this point, not even for datamining or fan translations or whatever. The BUP4 crap was pretty damn annoying, but the end result's pretty neat, even if conversion's pretty *slow*. I'll try those TXPL files next, and possibly last. Not much left in there I'd care about or think I can do...

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -59,6 +59,7 @@
     <Compile Include="GXT.cs" />
     <Compile Include="KSLT.cs" />
     <Compile Include="KTX.cs" />
+    <Compile Include="MSK3.cs" />
     <Compile Include="NMT.cs" />
     <Compile Include="PIC4.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
