Added incomplete TXPL support
Wonder if this also has rectangles for ex. individual menu items or other on-screen elements and whatnot, will need to look into that later

--- a/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
+++ b/Scarlet.IO.ImageFormats/Scarlet.IO.ImageFormats.csproj
@@ -79,6 +79,7 @@
     <Compile Include="TXF.cs" />
     <Compile Include="TXG.cs" />
     <Compile Include="TXP.cs" />
+    <Compile Include="TXPL.cs" />
     <Compile Include="VTXP.cs" />
     <Compile Include="XGTL.cs" />
   </ItemGroup>
